--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "^10.0.0",
+    "ag-grid-angular": "^23.2.1",
+    "ag-grid-community": "^23.2.1",
     "angular-in-memory-web-api": "^0.11.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
